--- a/static/style.css
+++ b/static/style.css
@@ -1,12 +1,87 @@
+html * {
+    font-family: sans-serif;
+}
+
 body {
     text-align: center;
     margin: 0;
+    background: #FFEBAF;
 }
 
-header {
-    padding: 30px 0;
-    font-family: sans-serif;
-    font-size: 1.2em;
-    color: aqua;
-    background: linear-gradient(orange, red);
+table {
+    width: 80%;
+    margin: 0 auto;
+}
+
+
+table input {
+    padding: 8px 15px;
+    margin: 2px;
+    border: 2px solid #4C9DB0;
+    background-color: #fff;
+    color: #4C9DB0;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    transition: all 0.3s ease;
+
+}
+
+table input:hover {
+    background-color: #4C9DB0;
+    color: white;
+
+}
+table input:hover::placeholder {
+    color: white;
+
+}
+
+table input.selected {
+    background-color: #4C9DB0;
+    color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.right-block {
+    vertical-align: top;
+    width: 600px;
+}
+
+.result-table {
+    border-collapse: collapse;
+    width: 60%;
+    margin: 10px auto;
+}
+
+.result-table th,
+.result-table td {
+    border: 1px solid #333;
+    padding: 8px;
+    text-align: center;
+    white-space: nowrap;
+
+}
+
+.result-table th {
+    font-weight: bold;
+}
+
+.result-table tbody tr:nth-child(even) {
+    background-color: rgba(255, 235, 175, 2);
+}
+
+.coord-input {
+    width: 200px;
+    padding: 10px 15px;
+    border: 2px solid #A8C89A;
+    border-radius: 15px;
+    font-size: 16px;
+    font-family: monospace;
+    background-color: rgba(76, 157, 176, 0.28);
+    text-align: center;
+}
+
+.input-buttons {
+    position: fixed;
 }
